@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false


skinparam classAttributeIconSize 0

hide circle
hide methods




class Client{
    id
    name
    phoneNumber
    email
}

class AnnouncementAvailable{
id
listingDate
comission
requestPrice
typeBusiness
}


class Agent{
Agency
}


class VisitRequest{
date
timeSlot
visitRequestOpinion
}


class Visit{
listingDate
agentIdication
}





Client "1" - "*" AnnouncementAvailable : displays >
Visit "1" -"1" AnnouncementAvailable :  related to >
Client "1" -- "*" VisitRequest : submits >
VisitRequest "1" - "1" Visit : can become >
Agent "1" -- "*" AnnouncementAvailable : publish >





@enduml